Update DashboardResponse